Updated background color to background image

--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,9 @@
           </div>
           <div class="welcome">
             <div class="content">
-              <h1>Todo-List 📝</h1>
-              <h1>Hey Rolly!😊🥰</h1>
+              <h2>Todo-List 📝</h2>
+              <h1 id="greeting-text">Hey! 😊🥰</h1>
+              <p id="date-time"></p>
               <p>Today you have <span id="total-tasks">5</span> tasks</p>
               <p id="motivation">"Every small step counts toward your goals!"</p>              
             </div>
