Removed unwanted code for styling

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
               <h2>Todo-List 📝</h2>
               <h1 id="greeting-text">Hey! 😊🥰</h1>
               <p id="date-time"></p>
-              <p>Today you have <span id="total-tasks">5</span> tasks</p>
+              <p>Today you have <span id="total-tasks"></span> tasks</p>
               <p id="motivation">"Every small step counts toward your goals!"</p>              
             </div>
             <div class="img">
@@ -52,7 +52,7 @@
         <button id="themeToggle" class="brightness-toggle">
           ☀️ <!-- Icon for brightness -->
         </button>
-        
+      
         <div class="categories-wrapper">
           <div class="categories">
             <div class="category">
