--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
           </div>
           <div class="welcome">
             <div class="content">
-              <h1>Todo-list</h1>
-              <h1>Hey Rolly!</h1>
-              <p>Today you have <span id="total-tasks">5</span> tasks</p>
+              <h2>Todo-List 📝</h2>
+              <h1 id="greeting-text">Hey! 😊🥰</h1>
+              <p id="date-time"></p>
+              <p>Today you have <span id="total-tasks"></span> tasks</p>
               <p id="motivation">"Every small step counts toward your goals!"</p>              
             </div>
             <div class="img">
@@ -51,7 +52,7 @@
         <button id="themeToggle" class="brightness-toggle">
           ☀️ <!-- Icon for brightness -->
         </button>
-        
+      
         <div class="categories-wrapper">
           <div class="categories">
             <div class="category">
